--- a/templates/try.html
+++ b/templates/try.html
@@ -98,11 +98,11 @@
 <div class="w3-container" style="padding:128px 16px" id="about">
 	<h2 class="w3-center w3-xxlarge" style="font-family:Maiandra Gd, Trebuchet MS, Arial">Prediction of PM10</h2>
 	<p class="w3-center w3-xlarge" style="font-family:Maiandra Gd, Trebuchet MS, Arial" >The goal is to inform about air pullotion in a particular day and give some advice to improve our life-style and be eco-friendly. <br>
-	PM10's concentration have impacts on climate and precipitation that adversely affect human health. <br>
-	The size of the particle is a main determinant of where in the respiratory tract the particle will come to rest when inhaled. <br> 
-	The smallest ones may be even more damaging to the cardiovascular system other than they can cause respiratory diseases. <br>
+	PM10's concentration has impacts on climate and precipitations, as consequence they can even affect negatively human health. <br>
+	When the particles are inhaled they remain in the respiratory tract depending on their size. <br> 
+	The smallest ones are even more damaging to the cardiovascular system and can also cause respiratory diseases. <br>
 	So it's important to be-ecofriendly and be informed not only for our health but for our earth's health too. <br>
-	Remember that only positions in Milan's municipalities are valid.</p>
+	Remember that only Milan's municipalities positions are valid.</p>
 	<br><br><br>
 	
 	<div align='center' width='80%'>
