--- a/templates/try.html
+++ b/templates/try.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="it-IT" prefix="og: http://ogp.me/ns#">
 <head>
-	<title>Capstone</title>
+	<title>B-ecool</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
