--- a/templates/try.html
+++ b/templates/try.html
@@ -524,7 +524,7 @@ $("#Subway").click(function(event) {
 	  <img src="{{ url_for('static', filename="zoom.jpg")}}"alt="Author" style="width:150px" class="w3-circle"><br><br>
 	  
 	  <h4 class="w3-xlarge" style="font-family:Maiandra Gd, Trebuchet MS, Arial">Alice Giampino</h4>
-	  <h6 class="w3-xlarge" style="font-family:Maiandra Gd, Trebuchet MS, Arial">Statitician & Data Scientist</h6> 
+	  <h6 class="w3-xlarge" style="font-family:Maiandra Gd, Trebuchet MS, Arial">Statistician & Data Scientist</h6> 
 	</div>
 	<br>
       <p class="w3-xlarge" style="font-family:Maiandra Gd, Trebuchet MS, Arial">For more information send me an email or text me.</p>
