--- a/templates/try.html
+++ b/templates/try.html
@@ -195,7 +195,7 @@
 <div class="w3-section">
 <div class="w3-quarter w3-large" style='width:300px; font-family:Maiandra Gd, Trebuchet MS, Arial'>
 	<form action = "" method="POST">
-	<label>Position (es. via Koch, Milano):</label>
+	<label>Position (es. via Robert Koch, Milano):</label>
 		<input class="w3-input" type="text" name="Position" required>
 		<table>
 		<tr>
